--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,6 +39,7 @@ html, body, .app, .home, .views {
   flex-direction: row;
 }
 .layout {
+  position: relative;
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
@@ -119,7 +120,14 @@ button:active {
   background-color: $bg-menu-active;
   box-shadow: none;
 }
-.toolbar {
+.toolbar-top {
+  position: relative;
+  left: -50%;
+  top: 0;
+  border-radius: 0 0 5px 5px;
+  background-color: rgba(0, 0, 0, 0.25);
+}
+.toolbar-bottom {
   position: relative;
   left: -50%;
   bottom: 0;
