--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,16 +3,19 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   font-family: Verdana, sans-serif;
   font-size: $font-size;
 }
+
 html, body, .app, .home, .views {
   width: 100%;
   height: 100%;
   margin: 0;
   overflow: hidden;
 }
+
 .home {
   background-color: $bg-dark;
   display: flex;
@@ -20,10 +23,7 @@ html, body, .app, .home, .views {
   align-items: center;
   justify-content: center;
 }
-.views {
-  display: flex;
-  flex-direction: column;
-}
+
 .header {
   color: $color-menu;
   background-color: $bg-menu;
@@ -33,11 +33,13 @@ html, body, .app, .home, .views {
   display: flex;
   flex-direction: row;
 }
+
 .main {
   flex: 1 1 0;
   display: flex;
   flex-direction: row;
 }
+
 .layout {
   position: relative;
   flex: 1 1 0;
@@ -49,6 +51,33 @@ html, body, .app, .home, .views {
     flex-direction: row;
   }
 }
+
+.views {
+  display: flex;
+  flex-direction: column;
+}
+
+.view {
+  position: relative;
+  flex: 1 1 0;
+}
+
+.overlay {
+  position: absolute;
+}
+
+.view, .overlay {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  outline: none;
+}
+
+.canvas-3d {
+  position: absolute;
+  background-color: $bg-main;
+}
+
 .tip {
   position: absolute;
   background-color: $bg-tip;
@@ -58,52 +87,52 @@ html, body, .app, .home, .views {
   padding: 4px 4px 3px;
   z-index: $z-tip;
 }
-.anchor {
-  position: absolute;
-}
-.left {
-  left: 0;
-}
-.top {
-  top: 0;
-}
-.right {
-  right: 0;
-}
-.bottom {
-  bottom: 0;
-}
-.h-center {
-  left: 50%;
-}
-.v-center {
-  top: 50%;
-}
+
+.number { text-align: right; }
+
+.anchor { position: absolute; }
+
+.left { left: 0; }
+
+.top { top: 0; }
+
+.right { right: 0; }
+
+.bottom { bottom: 0; }
+
+.h-center { left: 50%; }
+
+.v-center { top: 50%; }
+
 .menu {
   display: flex;
   align-content: stretch;
   font-size: $font-size-menu;
+
+  input {
+    display: none;
+  }
+
+  label {
+    padding: $padding-menu;
+    user-select: none;
+    &[active] {
+      background-color: $bg-menu-active;
+    }
+    &:hover {
+      background-color: $bg-menu-hover;
+    }
+    &:active {
+      background-color: $bg-menu-active;
+    }
+  }
 }
-.menu label {
-  padding: $padding-menu;
-  user-select: none;
-}
-.menu label:hover {
-  background-color: $bg-menu-hover;
-}
-.menu input {
-  display: none;
-}
-.menu input:checked + label {
-  background-color: $bg-menu-active;
-}
-.active {
-  background-color: $bg-menu-active;
-}
+
 .separator {
   background-color: $bg-menu-dark;
   width: 2px;
 }
+
 button {
   color: $color-menu;
   background-color: $bg-menu;
@@ -112,14 +141,15 @@ button {
   padding: $padding-menu;
   box-shadow: $shadow-soft;
   outline: none;
+  &:hover {
+    background-color: $bg-menu-hover;
+  }
+  &:active {
+    background-color: $bg-menu-active;
+    box-shadow: none;
+  }
 }
-button:hover {
-  background-color: $bg-menu-hover;
-}
-button:active {
-  background-color: $bg-menu-active;
-  box-shadow: none;
-}
+
 .toolbar-top {
   position: relative;
   left: -50%;
@@ -127,6 +157,7 @@ button:active {
   border-radius: 0 0 5px 5px;
   background-color: rgba(0, 0, 0, 0.25);
 }
+
 .toolbar-bottom {
   position: relative;
   left: -50%;
@@ -134,6 +165,7 @@ button:active {
   border-radius: 5px 5px 0 0;
   background-color: rgba(0, 0, 0, 0.25);
 }
+
 select {
   border: none;
 }
@@ -144,6 +176,7 @@ select {
   text-shadow: $shadow-text;
   background-color: $bg-menu-hover;
 }
+
 .slider-container {
   margin: 10px;
 }
@@ -155,6 +188,7 @@ select {
   flex-direction: column;
   pointer-events: none;
 }
+
 .window-header {
   color: white;
   font-size: $font-size-menu;
@@ -165,9 +199,11 @@ select {
   background-color: $bg-menu;
   flex: 0 0 auto;
 }
+
 .window-title {
   padding: $padding-menu;
 }
+
 .window-content {
   position: relative;
   background-color: $bg-dark;
